--- a/manipulator/templates/manipulator/main_menu.html
+++ b/manipulator/templates/manipulator/main_menu.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<h1>Hello, {{ username }}</h1>
-
-<p>My first paragraph.</p>
-
+<head>
+    <style>
+        .div {
+            
+        }
+    </style>
+</head>
+<body style="background-color: wheat;">
+    <div style=" height: 10vw; width: 30%; margin: 10px 10px; background-color:tomato; text-align: center;">
+        <p><b><h3>Hello, {{ username }} </h3></b></p>
+    </div>
+    <div style="height: 40vw; width: 30%; margin: 10px 10px; background-color:tomato; text-align: center;">
+        123
+    </div>
 </body>
 </html>
