--- a/manipulator/templates/manipulator/authorisation.html
+++ b/manipulator/templates/manipulator/authorisation.html
@@ -21,22 +21,26 @@
     </style>
 </head>
 <body style="background:wheat">
-
     <div class="login">
         <div class="login" style="width: 580px; height: 380px; margin: -190px 0 0 -290px;">
-            <p style="margin-top: 80px;">
-                <p><b><h3>Ваш логин:</h3></b></p>
-                <input type="text" size="70">
-            </p>
-            <p>
-                <p><b><h3>Ваш пароль:</h3></b></p>
-                <input type="password" size="70">
-            </p>
-            <p>
-                <input type="submit" value="Войти" style="height: 50px; width: 200px; left: 50%; margin-left: 190px;">
-            </p>
+            <form action="{% url 'LoginAndPasswordCheck' %}" method="post">
+            {% csrf_token %}
+                <p style="margin-top: 80px;">
+                    <p><b><h3>Ваш логин:</h3></b></p>
+                    <input type="text" name="UserLoginInput" size="70">
+                </p>
+                <p>
+                    <p><b><h3>Ваш пароль:</h3></b></p>
+                    <input type="password" name="UserPasswordInput" size="70">
+                </p>
+                <p>
+                    <p><b><h3 style="color: red;">{{ error_message }}</h3></b></p>
+                </p>
+                <p>
+                    <input type="submit" value="Войти" style="height: 50px; width: 200px; left: 50%; margin-left: 190px;">
+                </p>
+            </form>
         </div>
     </div>
-
 </body>
 </html>
