--- a/manipulator/templates/manipulator/main_menu.html
+++ b/manipulator/templates/manipulator/main_menu.html
@@ -9,14 +9,127 @@
             text-align: center;
             border-radius: 25px;
         }
+
+        .tab {
+            overflow: hidden;
+            border: 1px solid black;
+            background-color: lightgray;
+        }
+
+        .tab button {
+            background-color: inherit;
+            float: left;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            padding: 14px 16px;
+            transition: 0.3s;
+        }
+
+        .tab button:hover {
+            background-color: white;
+        }
+
+        .tab button.active {
+            background-color: #ccc;
+        }
+
+        .tabcontent {
+            position: relative;
+            background-color: lightgray;
+            margin: 40px 30px 30px 30px;
+            height: 32vw;
+            display: none;
+            padding: 6px 12px;
+            border-top: none;
+        }
+
+        .btn {
+            height: 50px;
+            width: 70px;
+        }
+
+        .mcrprBtn {
+            height: 30px;
+            width: 70px;
+        }
     </style>
+    <script>
+        function openCity(evt, cityName) {
+
+            tabcontent = document.getElementsByClassName("tabcontent");
+            for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+            }
+
+            tablinks = document.getElementsByClassName("tablinks");
+            for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace(" active", "");
+            }
+
+            document.getElementById(cityName).style.display = "block";
+            evt.currentTarget.className += " active";
+        }
+
+        function addcmnd(evt, cmndName) {
+            currText = document.getElementById("cmndList").value;
+            amOfCommands = currText.split(' ');
+            if(amOfCommands.length <= 5)
+            {
+                currText += " " + cmndName;
+                document.getElementById("cmndList").value = currText;
+            }
+        }
+
+        function clearField(evt)
+        {
+            document.getElementById("cmndList").value = "";
+        }
+
+    </script>
 </head>
 <body style="background-color: wheat;">
     <div class="div" style=" height: 10vw; width: 30%;">
         <p><b><h3>Hello, {{ username }} </h3></b></p>
     </div>
     <div class="div" style="height: 40vw; width: 30%;">
-        123
+            <div class="tab" style="position: relative; top: 30px;">
+                <button class="tablinks" style="width: 50%;" onclick="openCity(event, 'Directly')">Ручное управление</button>
+                <button class="tablinks" style="width: 50%;" onclick="openCity(event, 'Program')">Микропрограмма</button>
+            </div>
+          
+            <div id="Directly" class="tabcontent">
+                <h3>Ручное управление</h3>
+                <p>В данной вкладке с помощью кнопок есть возможность управлять манипулятором</p>
+                <div style="position: inherit; top: 20%; left: 25%; background-color: black; height: 200px; width: 230px;">
+                    <input type="button" value="ВПЕРЕД" class="btn" style="margin-top: 20px;margin-left: 0px;">
+                    <div style="margin-top: 5px;">
+                        <input type="button" value="ВЛЕВО" class="btn" style="margin-left: 0px;">
+                        <input type="button" value="ЗАХВАТ" class="btn">
+                        <input type="button" value="ВПРАВО" class="btn">
+                    </div>
+                    <input type="button" value="НАЗАД" class="btn" style="margin-top: 5px;">
+                </div>
+            </div>
+          
+            <div id="Program" class="tabcontent">
+                <h3>Микропрограмма</h3>
+                <p>Создайте микропрограмму и отправьте на выполнение манипулятору. Максимальное количество команд - 5</p>
+                <div>
+                    <input type="text" id="cmndList" style="width: 80%; height: 100px;" readonly="readonly">
+                </div>
+                <div style="margin-top: 30px;">
+                    <input type="button" value="ВПЕРЕД" class="mcrprBtn" onclick="addcmnd(event, 'ВПЕРЕД')">
+                    <input type="button" value="ВЛЕВО" class="mcrprBtn" onclick="addcmnd(event, 'ВЛЕВО')">
+                    <input type="button" value="ЗАХВАТ" class="mcrprBtn" onclick="addcmnd(event, 'ЗАХВАТ')">
+                    <input type="button" value="ВПРАВО" class="mcrprBtn" onclick="addcmnd(event, 'ВПРАВО')">
+                    <input type="button" value="НАЗАД" class="mcrprBtn" onclick="addcmnd(event, 'НАЗАД')">
+                </div>
+                <div>
+                    <input type="button" value="ОЧИСТИТЬ" class="mcrprBtn" style="width: 100px; margin-top: 30px;" onclick="clearField(event)">
+                </div>
+                <input type="button" value="ОТПРАВИТЬ НА ВЫПОЛНЕНИЕ" class="mcrprBtn" style="height: 100px; width: 220px; margin-top: 30px;">
+            </div>
     </div>
     <div class="div" style="text-align: unset; position: absolute; left: 30%; top: 0; margin-left: 20px; margin-top: 19px; height: 50.5vw; width: 68vw;">
         <img src="http://127.0.0.1:8000/manipulator/monitor/" style="margin-top: 30px; margin-left: 30px; width: 400px; height: 300px; height: 47.5vw; width: 65vw;">
